WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309981
REGRESSION(
309283@main
): Broke internal macOS builds (-Wunsafe-buffer-usage-in-format-attr-call)
https://bugs.webkit.org/show_bug.cgi?id=309981
Summary
REGRESSION(309283@main): Broke internal macOS builds (-Wunsafe-buffer-usage-i...
Abrar Rahman Protyasha
Reported
2026-03-15 03:23:52 PDT
``` /Source/WebCore/cssjit/SelectorCompiler.cpp:1494:5: error: formatting function 'dataLogF' is unsafe [-Werror,-Wunsafe-buffer-usage-in-format-attr-call] 1494 | dataLogFIf(shouldDumpCSSJITDisassembly(), "Compiling \"%s\"\n", m_originalSelector.selectorText().utf8().data()); ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-15 03:23:58 PDT
<
rdar://problem/172596692
>
Abrar Rahman Protyasha
Comment 2
2026-03-15 03:26:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60654
EWS
Comment 3
2026-03-15 03:49:48 PDT
Committed
309287@main
(f4d9aee8564b): <
https://commits.webkit.org/309287@main
> Reviewed commits have been landed. Closing PR #60654 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug