REGRESSION(309283@main): Broke internal macOS builds (-Wunsafe-buffer-usage-in-format-attr-call) https://bugs.webkit.org/show_bug.cgi?id=309981 rdar://172596692

Unreviewed build fix.

This build fix takes a page out of 308758@main's book to show that the
%s string being passed in to dataLogF is null terminated. The error we
address reads as such:

```
/Source/WebCore/cssjit/SelectorCompiler.cpp:1494:5: error: formatting function 'dataLogF' is unsafe [-Werror,-Wunsafe-buffer-usage-in-format-attr-call]
 1494 |     dataLogFIf(shouldDumpCSSJITDisassembly(), "Compiling \"%s\"\n", m_originalSelector.selectorText().utf8().data());
```

* Source/WebCore/cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::SelectorCodeGenerator::SelectorCodeGenerator):

Canonical link: https://commits.webkit.org/309287@main